<resources>
    <string name="app_name">Podwozka</string>

    <!--Accounts types-->
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>

    <!--Buttons names-->
    <string name="login_in">Log in</string>
    <string name="login_out">Log out</string>
    <string name="register_button">Register</string>
    <string name="plan_trip">Plan trip</string>
    <string name="trip_history">Your trip history</string>
    <string name="user_account_info">Account info</string>
    <string name="cancel_travel">Cancel trip</string>
    <string name="edit_travel">Edit travel</string>
    <string name="signed_up_passengers">Signed up passengers</string>
    <string name="coming_trips">Coming</string>
    <string name="past_trips">Past</string>
    <string name="map">Map</string>
    <string name="save_car_data">Save</string>
    <string name="car_info">Car info</string>
    <string name="pick_start_place">Pick a start place</string>
    <string name="pick_end_place">Pick an end place</string>

    <!--Trip fields-->
    <string name="start_place">Start place address</string>
    <string name="end_place">End place address</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="passengers_max">How many passengers can you take?</string>
    <string name="submit_trip">Submit</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>

    <!--Messages-->
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="cancel_trip_confirmation">Are you sure you want cancel a trip?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_place_empty">Please type start place</string>
    <string name="end_place_empty">Please type end place</string>
    <string name="login_empty">Please type login</string>
    <string name="password_empty">Please type password</string>
    <string name="email_empty">Please type email</string>
    <string name="travel_canceled">Travel canceled</string>
    <string name="sign_up_for_trip_confirmation">Are you sure you want to sign up for this travel?</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="email_user_exists">Account with that email or user name already exists</string>
    <string name="registration_successful">Registration successful</string>
    <string name="account_not_existing">Account with such login does not exist</string>
    <string name="account_type_empty">Please choose account type</string>
    <string name="free_seats">Free seats</string>
    <string name="password_retype_empty">Please retype password </string>
    <string name="passwords_diffrent">Passwords are different</string>
    <string name="name_empty">Please type your name </string>
    <string name="surname_empty">Please type your surname </string>
    <string name="login_failed">User name or password incorrect</string>
    <string name="save_changes">Save changes</string>

        <!-- Errors -->
    <string name="err_create_fail">Creation attempt failed!</string>
    <string name="field_empty">Please type</string>
    <string name="car_not_added">Please add a car before planning a trip</string>
    <string name="unknown_error">We are really sorry, an unknown error occurred :(</string>
    <string name="car_exists">You already added a car</string>
    <string name="travel_not_found">Trip not found</string>
    <string name="already_signed_up">You already signed up for this trip</string>
    <string name="error">Error</string>
    <string name="pick_up_date_empty">Please choose pick up date</string>
    <string name="pick_up_time_empty">Please choose pick up time</string>
    <string name="no_matching_travels">There are no travels matching your criteria</string>
    <string name="trip_stopped_existing">This trip was deleted</string>
    <string name="no_coming_travels">You have no coming travels</string>
    <string name="no_past_travels">You have no past travels</string>
    <string name="no_travels">You have no travels</string>
    <string name="password_too_short">Password should have at least 4 signs</string>
    <string name="password_too_long">Password cannot have more signs than 100</string>
    <string name="production_year_not_integer">Please pass only integers in a production year field</string>
    <string name="car_too_old">Car cannot be old more than 20 years</string>
    <string name="car_from_future">Car from future? :)</string>
    <string name="brand_not_only_letters">Please type only letters in a Brand field</string>
    <string name="color_not_only_letters">Please type only letters in a Color field</string>
    <string name="max_passengers_only_numbers">Please type only numbers in a Max passengers capacity field</string>
    <string name="server_down">We are really sorry, our server is down :(</string>
    <string name="no_internet_connection">You have no internet connection</string>
    <string name="non_valid_time">Choosed time is before current time</string>

    <!--Other fields-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_login">Login</string>
    <string name="user_password">Password</string>
    <string name="user_password_check">Retype password</string>
    <string name="user_email">Email</string>

    <!-- Maps -->
    <string name="toast_place">Place</string>

    <!--Car fields-->
    <string name="car_brand">Brand</string>
    <string name="car_model">Model</string>
    <string name="car_color">Color</string>
    <string name="car_production_year">Production year</string>
    <string name="car_registration_number">Registration number</string>
    <string name="car_max_passengers_capacity">How many passengers can you take</string>
    <string name="driver_name">Driver name</string>

    <string name="brand_field">brand</string>
    <string name="model_field">model</string>
    <string name="color_field">color</string>
    <string name="production_year_field">productionYear</string>
    <string name="registration_number_field">registrationNumber</string>
    <string name="max_passengers_capacity_field">maxPassengersCapacity</string>

    <!--Success messages-->
    <string name="car_added">Car added</string>
    <string name="trip_added">Trip added</string>
    <string name="travel_edit_success">Trip updated</string>
    <string name="sing_up_success">Signing up successful</string>

    <!--Acceptance fields-->
    <string name="accepted">Acceptance:</string>

</resources>
