<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Passenger.PassengerFindTravels">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/startTravelPlace"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/start_place"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="251dp" />

        <EditText
            android:id="@+id/endTravelPlace"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/end_place"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pickedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_date" />

            <Button
                android:id="@+id/setDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="showDatePickerDialog"
                android:text="@string/set_date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pickedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/start_time"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/setTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:onClick="showTimePickerDialog"
                android:text="@string/set_time" />

        </LinearLayout>

        <Button
            android:id="@+id/submitNewTravelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_trip"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="277dp" />

        <Button
            android:id="@+id/reverseTravelPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" ↑ ↓" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
