<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/comingTravels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coming_trips" />

    <Button
        android:id="@+id/pastTravels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/past_trips" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/noComingTravels"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:scrollbars="vertical"
        android:text="@string/no_coming_travels"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/noPastTravels"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:scrollbars="vertical"
        android:text="@string/no_past_travels"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/noTravels"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="77dp"
        android:scrollbars="vertical"
        android:text="@string/no_travels"
        android:visibility="invisible" />

</RelativeLayout>
