<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="426dp"
        android:layout_height="444dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/editTravel"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/edit_travel"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="24dp" />

        <Button
            android:id="@+id/passangersInfo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/signed_up_passengers"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="24dp" />

        <Button
            android:id="@+id/cancelTravel"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/cancel_travel"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="24dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
