<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Passenger.PassengerTravelDriverAndCar"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="426dp"
        android:layout_height="444dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/driverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_description_text_size"
            android:text="@string/driver_name" />

        <TextView
            android:id="@+id/driverNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="@dimen/default_input_text_size"
            android:maxLength="@integer/default_input_text_max_length"
            android:hint="@string/driver_name" />

        <TextView
            android:id="@+id/driverCarBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_description_text_size"
            android:text="@string/car_brand" />

        <TextView
            android:id="@+id/driverCarBrandField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_input_text_size"
            android:maxLength="@integer/default_input_text_max_length"
            android:hint="@string/car_brand" />

        <TextView
            android:id="@+id/driverCarModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_description_text_size"
            android:text="@string/car_model" />

        <TextView
            android:id="@+id/driverCarModelField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_input_text_size"
            android:maxLength="@integer/default_input_text_max_length"
            android:hint="@string/car_model" />

        <TextView
            android:id="@+id/driverCarColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_description_text_size"
            android:text="@string/car_color" />

        <TextView
            android:id="@+id/driverCarColorField"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:hint="@string/car_color"
            android:textSize="@dimen/default_input_text_size"
            android:maxLength="@integer/default_input_text_max_length" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
